2013-03-05  Pedro Vicente  <pvicente@uci.edu>

	* nco_dmn_fll_nm_id() Return unique dimension full name from unique ID 
  
	* nco_dmn_trv_sct() Return unique dimension object from unique ID 
  
2013-03-05  Charlie Zender  <zender@uci.edu>

	* Add record character variables to in.cdl

2013-03-04  Pedro Vicente  <pvicente@uci.edu>

	* nco_bld_dmn_ids_trv() Build dimension info for all variables using unique dimension IDs

	* nco_has_crd_dmn_scp() Is there a variable with same name in dimension's scope?

2013-03-02  Pedro Vicente  <pvicente@uci.edu>

	* nco_xtr_crd_add() Add all coordinates to extraction list
	re-written for GTT instead of using netCDF API calls

2013-02-27  Pedro Vicente  <pvicente@uci.edu>

	* nco_cpy_msa_lmt() Copy MSA structs GTT to local function (print or write)

	* nco_prn_var_dfn() re-written for GTT

	* nco_cnk_sz_set_trv() re-written for GTT

2013-02-26  Charlie Zender  <zender@uci.edu>

	* Add nco_dbg_grp between nco_dbg_scl and nco_dbg_var

	* Improve epitaph from NC_ENOTNC to include diskless/RAM errors

	* ncrename dies more gracefully when required attributes do not exist

2013-02-26  Pedro Vicente  <pvicente@uci.edu>

	* rewrote nco_xtr_cf_prv_add() Add specified CF-compliant coordinates of specified variable to extraction list
    this fixes nco1086, deprecated functions used nco_aux_grp_id(), trv_tbl_fnd_var_nm()
    add regression test ncks#60

	* nco_prt_grp_nm_fll() Debug function to print group full name from ID

2013-02-25  Pedro Vicente  <pvicente@uci.edu>

	* nco_msa_wrp_splt_cpy() Split wrapped dimensions (make deep copy of new wrapped limits)

	* nco_msa_prn_var_val_trv() Print variable data; use GTT to get coordinates;
     this fixes nco1088

	* nco_cpy_var_val_mlt_lmt_trv() Copy variable data from input to output file

2013-02-25  Charlie Zender  <zender@uci.edu>

	* #define NCO_USE_FILL_VALUE before not after #ifdef NCO_USE_FILL_VALUE

2013-02-24  Pedro Vicente  <pvicente@uci.edu>
